make sure link colours contrast with the background colour

--- a/scss/utils/_colours.scss
+++ b/scss/utils/_colours.scss
@@ -7,7 +7,8 @@
 // colour set by the background property,
 .bg {
 
-	&-current { color: currentColor; }
+	$light-link: nth( map.get( $colour_theme, "link" ), 1 );
+	$dark-link: nth( map.get( $colour_theme, "link" ), 2 );
 
 	@each $c_name, $c_value in $colours {
 		&-#{$c_name} {
@@ -17,6 +18,10 @@
 			&__hover:hover {
 				background-color: var( --color-#{$c_name} );
 				color: get_contrast( $c_value );
+			}
+
+			a {
+				color: get_contrast( $c_value, var( --color-#{$dark-link} ), var( --color-#{$light-link} ) );
 			}
 		}
 	}
